Fix SonarQube compliance: replace Collectors.toList() with toList(), fix Math.abs overflow, add exception logging
Co-authored-by: GeroldGit <94544745+GeroldGit@users.noreply.github.com>
Agent-Logs-Url: https://github.com/GeroldGit/tech-assignment-fede/sessions/77cd5cd9-b4d6-443e-849f-6ed93d140c8e